--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "safaridriver",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "An NPM wrapper for handling the Safaridriver binary.",
   "main": "index.js",
   "scripts": {
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/webdriverio-community/node-safaridriver/issues"
   },
-  "homepage": "https://github.com/webdriverio-community/node-safaridriver#readme"
+  "homepage": "https://github.com/webdriverio-community/node-safaridriver#readme",
+  "devDependencies": {
+    "release-it": "^15.6.0"
+  }
 }
