--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
   "name": "safaridriver",
   "version": "0.0.1",
+  "author": "Christian Bromann <mail@bromann.dev>",
+  "license": "MIT",
   "description": "An NPM wrapper for handling the Safaridriver binary.",
-  "main": "index.js",
+  "homepage": "https://github.com/webdriverio-community/node-safaridriver#readme",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -b .",
+    "ci": "run-s lint build test",
+    "clean": "rimraf ./node_modules package-lock.yaml ./dist",
+    "prepare": "husky install",
+    "test": "run-s test:*",
+    "test:lint": "eslint src tests",
+    "test:unit": "vitest",
+    "test:interop": "node ./tests/interop/cjs.test.js",
+    "watch": "npm run build -- --watch"
   },
   "repository": {
     "type": "git",
@@ -17,13 +27,35 @@
     "webdriverio",
     "selenium"
   ],
-  "author": "Christian Bromann <mail@bromann.dev>",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/webdriverio-community/node-safaridriver/issues"
   },
-  "homepage": "https://github.com/webdriverio-community/node-safaridriver#readme",
+  "main": "./dist/cjs/index.js",
+  "type": "module",
+  "module": "./dist/index.js",
+  "exports": {
+    ".": [
+      {
+        "types": "./dist/index.d.ts",
+        "import": "./dist/index.js",
+        "require": "./dist/cjs/index.js"
+      },
+      "./dist/cjs/index.js"
+    ]
+  },
+  "types": "./build/index.d.ts",
+  "typeScriptVersion": "3.8.3",
   "devDependencies": {
-    "release-it": "^15.6.0"
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "@vitest/coverage-c8": "^0.26.3",
+    "eslint": "^8.31.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-unicorn": "^45.0.2",
+    "husky": "^8.0.3",
+    "npm-run-all": "^4.1.5",
+    "release-it": "^15.6.0",
+    "typescript": "^4.9.4",
+    "vitest": "^0.26.3"
   }
 }
