--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,9 +36,11 @@ jobs:
         with:
           ref: 'main'
           fetch-depth: 0
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         with:
           node-version: 18.x
+      - name: Install Dependencies
+        run: npm ci
       - name: NPM Setup
         run: |
           npm set registry "https://registry.npmjs.org/"
