--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,8 @@ jobs:
           node-version: 18.x
       - name: Install Dependencies
         run: npm ci
+      - name: Build
+        run: npm run build
       - name: NPM Setup
         run: |
           npm set registry "https://registry.npmjs.org/"
