--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -32,4 +32,4 @@ jobs:
       run: npm run build
 
     - name: Audit
-      run: npm audit --audit-level=moderate
+      run: npm audit --audit-level=moderate --omit=dev
