--- a/package.json
+++ b/package.json
@@ -46,16 +46,16 @@
   "types": "./dist/index.d.ts",
   "typeScriptVersion": "3.8.3",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitest/coverage-c8": "^0.33.0",
-    "eslint": "^8.45.0",
-    "eslint-plugin-import": "^2.27.5",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "@vitest/coverage-v8": "^1.0.4",
+    "eslint": "^8.56.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-unicorn": "^49.0.0",
     "husky": "^8.0.3",
     "npm-run-all": "^4.1.5",
-    "release-it": "^17.0.0",
-    "typescript": "^5.1.6",
-    "vitest": "^0.34.1"
+    "release-it": "^17.0.1",
+    "typescript": "^5.3.3",
+    "vitest": "^1.0.4"
   }
 }
