--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "types": "./dist/index.d.ts",
   "typeScriptVersion": "3.8.3",
   "devDependencies": {
+    "@types/node": "^20.10.6",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "@vitest/coverage-v8": "^1.1.0",
