--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-unicorn": "^52.0.0",
     "husky": "^9.0.11",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all2": "^6.1.2",
     "release-it": "^17.1.1",
     "typescript": "^5.3.3",
     "vitest": "^1.3.0"
