--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,3 +5,30 @@ updates:
   schedule:
     interval: weekly
   open-pull-requests-limit: 10
+
+  groups:
+    patch-deps-updates-main:
+      update-types:
+        - "patch"
+    minor-deps-updates-main:
+      update-types:
+        - "minor"
+    major-deps-updates-main:
+      update-types:
+        - "major"
+- package-ecosystem: github-actions
+  directory: "/"
+  schedule:
+    interval: weekly
+    time: "11:00"
+  open-pull-requests-limit: 10
+  groups:
+    patch-deps-updates:
+      update-types:
+        - "patch"
+    minor-deps-updates:
+      update-types:
+        - "minor"
+    major-deps-updates:
+      update-types:
+        - "major"
