--- a/package.json
+++ b/package.json
@@ -50,12 +50,9 @@
     },
     "devDependencies": {
         "@types/node": "^22.8.6",
-        "@typescript-eslint/eslint-plugin": "^8.12.2",
-        "@typescript-eslint/parser": "^8.12.2",
         "@vitest/coverage-v8": "^2.1.4",
+        "@wdio/eslint": "^0.0.3",
         "eslint": "^9.14.0",
-        "eslint-plugin-import": "^2.31.0",
-        "eslint-plugin-unicorn": "^56.0.0",
         "husky": "^9.1.6",
         "npm-run-all2": "^7.0.1",
         "release-it": "^17.10.0",
