--- a/package.json
+++ b/package.json
@@ -44,19 +44,19 @@
         "prepare": "husky install",
         "test": "run-s test:*",
         "test:lint": "eslint src tests",
-        "test:unit": "vitest",
+        "test:unit": "vitest run",
         "test:interop": "node ./tests/interop/cjs.test.js",
         "watch": "npm run build -- --watch"
     },
     "devDependencies": {
-        "@types/node": "^25.0.2",
-        "@vitest/coverage-v8": "^4.0.4",
-        "@wdio/eslint": "^0.1.0",
-        "eslint": "^9.14.0",
-        "husky": "^9.1.6",
-        "npm-run-all2": "^8.0.1",
-        "release-it": "^19.0.1",
-        "typescript": "^5.6.3",
-        "vitest": "^4.0.4"
+        "@types/node": "^25.0.3",
+        "@vitest/coverage-v8": "^4.0.16",
+        "@wdio/eslint": "^0.1.3",
+        "eslint": "^9.39.2",
+        "husky": "^9.1.7",
+        "npm-run-all2": "^8.0.4",
+        "release-it": "^19.2.2",
+        "typescript": "^5.9.3",
+        "vitest": "^4.0.16"
     }
 }
